# controller/controller.go
@@ -19,6 +19,7 @@ func (controller *Controller) Route(app *fiber.App) {
 	app.Get("/", controller.Base)
 	app.Post("/v1/user", controller.Create)
 	app.Post("/v1/mechanics", controller.RegisterMechanic)
+	app.Post("/v1/orders", controller.CreateOrder)
 }
 
 func (controller *Controller) Base(c *fiber.Ctx) error {
@@ -46,6 +47,23 @@ func (controller *Controller) RegisterMechanic(c *fiber.Ctx) error {
 
 	err := controller.service.AddMechanic(bonus)
 
+	return exception.ErrorHandler(c, err)
+
+}
+
+func (controller *Controller) CreateOrder(c *fiber.Ctx) error {
+	var order model.Items
+	orderID := c.Query("order_id")
+	clientID := c.Query("client_id")
+	if clientID == "" || orderID == "" {
+		return exception.ErrorHandler(c, exception.ErrEnabledData)
+	}
+
+	if err := c.BodyParser(&order); err != nil {
+		return exception.ErrorHandler(c, err)
+	}
+
+	err := controller.service.CreateOrder(clientID, orderID, order)
 	return exception.ErrorHandler(c, err)
 
 }
